--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.19.0",
+    "router": "^1.3.3",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
